--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     <td width="60"><img src="imagenes/principal/logo1.fw.png" width="72" height="71" alt="1" /></td>
     <td width="422" valign="bottom"><table width="42" border="0" align="right">
       <tr>
-        <td class="inicio" clas="inicio"><a href="Index.html">INICIO</a></td>
+        <td class="inicio" clas="inicio"><a href="index.html">INICIO</a></td>
       </tr>
     </table></td>
   </tr>
